--- a/UpaProject/Views/Journals/Histories/HistoriesPage.xaml
+++ b/UpaProject/Views/Journals/Histories/HistoriesPage.xaml
@@ -33,7 +33,7 @@
                       ItemsSource="{Binding historyMTR}"
                       Name="HistoryMtrGrid">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Дата изменения" Binding="{Binding DateEdit,StringFormat='hh:mm dd,MM,yyyy'}"/>
+                    <DataGridTextColumn Header="Дата изменения" Binding="{Binding DateEdit,StringFormat='hh:mm dd.MM.yyyy'}"/>
                     <DataGridTextColumn Header="Редактор" Binding="{Binding Users.Name}"/>
                     <DataGridTextColumn Header="Гид" Binding="{Binding MTR.IdSap}"/>
                     <DataGridTextColumn Header="Наименование" Binding="{Binding MTR.Name}"/>
@@ -52,7 +52,7 @@
                       Margin="3"
                       Name="HistoryStoragesGrid">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="Дата изменения" Binding="{Binding DateEdit,StringFormat='hh:mm dd,MM,yyyy'}"/>
+                    <DataGridTextColumn Header="Дата изменения" Binding="{Binding DateEdit,StringFormat='hh:mm dd.MM.yyyy'}"/>
                     <DataGridTextColumn Header="Редактор" Binding="{Binding Users.Name}"/>
                     <DataGridTextColumn Header="Гид" Binding="{Binding Storage_MTR.MTR.IdSap}"/>
                     <DataGridTextColumn Header="Наименование" Binding="{Binding Storage_MTR.MTR.Name}"/>
@@ -88,7 +88,7 @@
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="ID" Binding="{Binding ID}"/>
                     <DataGridTextColumn Header="Имя пользователя" Binding="{Binding Users.Name}"/>
-                    <DataGridTextColumn Header="Дата входа" Binding="{Binding DateLogin}"/>
+                    <DataGridTextColumn Header="Дата входа" Binding="{Binding DateLogin,StringFormat='dd.MM.yyyy'}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </GroupBox>
