Обновлена логика автозаполнения полей в окне NewSubj. Подготовлена структура к переносу логики окна NewSubj под паттерн

--- a/UpaProject/Views/Journals/Operativs/WindowNewSubj.xaml
+++ b/UpaProject/Views/Journals/Operativs/WindowNewSubj.xaml
@@ -132,6 +132,7 @@
                       Style="{StaticResource Cmb}"
                       x:Name="CmbSystemASU" 
                       ItemsSource="{Binding}" 
+                      SelectionChanged="CmbSystemASU_SelectionChanged"
                       VerticalAlignment="Center" 
                       Text=""
                       Margin="5" 
@@ -158,6 +159,7 @@
                                   VerticalAlignment="Center"
                                   Text="" 
                                   Margin="5"
+                              SelectionChanged="CmbTag_SelectionChanged"
                                   Width="150"
                                   BorderBrush="Black"/>
                     <StackPanel Orientation="Horizontal"
